# hermit

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  _build_hermit_from_base.sh  build_hermit.sh  iwasm.com
.github/workflows/: ci.yml  iwasm-windows-compat.yml
benchmarks/: .gitignore  README.md  bench-artifacts.sh  bench-cli.sh
crates/hermitfile-parser/: Cargo.toml
crates/hermitfile-parser/src/: main.rs
hermit-cli/: CMakeLists.txt  Cargo.toml  Hermitfile  Hermitfile.release
hermit-cli/crates/hermitfile-parser/: Cargo.toml  Hermitfile
hermit-cli/crates/hermitfile-parser/src/: main.rs
src/: cowsay.wasm  hermit-base.c  main.c  wamr.c  wamr.h
src/cat/: Hermitfile  cat.c  hermit.json  main.wasm
src/count_vowels/: hermit.json  main.wasm
src/cowsay/: Hermitfile
src/ubuntu/: Hermitfile
