[package]
name = "hermitfile-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dockerfile-parser = { git = "https://github.com/dylibso/dockerfile-parser-rs", branch = "hermitfile-adaptation" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
