[package]
name = "hermitfile-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dockerfile-parser = { path = "../../../dockerfile-parser-rs" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]
